// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders 1`] = `
<button
  aria-disabled="false"
  class="Reset__Button-sc-ohlhxz-0 styled__Wrapper-sc-pzlzbh-0 eNpAQb fnYKKn"
  type="button"
>
  Button
</button>
`;

exports[`Button renders bold 1`] = `
<button
  aria-disabled="false"
  class="Reset__Button-sc-ohlhxz-0 styled__Wrapper-sc-pzlzbh-0 eNpAQb hIHjsH"
  type="button"
>
  Button
</button>
`;

exports[`Button renders disabled 1`] = `
<button
  aria-disabled="true"
  class="Reset__Button-sc-ohlhxz-0 styled__Wrapper-sc-pzlzbh-0 eNpAQb ibyxDU"
  disabled=""
  type="button"
>
  Button
</button>
`;

exports[`Button renders iconOnly button 1`] = `
<button
  aria-disabled="false"
  aria-label="Button"
  class="Reset__Button-sc-ohlhxz-0 styled__Wrapper-sc-pzlzbh-0 eNpAQb fnYKKn"
  type="button"
>
  <span
    class="styled__Icon-sc-pzlzbh-1"
  >
    <span
      class="styled__Icon-sc-ztr6p6-0 kwuIiV"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M244 400L100 256l144-144M120 256h292"
          fill="none"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="48"
        />
      </svg>
    </span>
  </span>
</button>
`;

exports[`Button renders outlined 1`] = `
<button
  aria-disabled="false"
  class="Reset__Button-sc-ohlhxz-0 styled__Wrapper-sc-pzlzbh-0 eNpAQb dNGKMI"
  type="button"
>
  Button
</button>
`;

exports[`Button renders padded 1`] = `
<button
  aria-disabled="false"
  class="Reset__Button-sc-ohlhxz-0 styled__Wrapper-sc-pzlzbh-0 eNpAQb kIBhZW"
  type="button"
>
  Button
</button>
`;

exports[`Button renders secondary 1`] = `
<button
  aria-disabled="false"
  class="Reset__Button-sc-ohlhxz-0 styled__Wrapper-sc-pzlzbh-0 eNpAQb ztbDP"
  type="button"
>
  Button
</button>
`;

exports[`Button renders small 1`] = `
<button
  aria-disabled="false"
  class="Reset__Button-sc-ohlhxz-0 styled__Wrapper-sc-pzlzbh-0 eNpAQb bxTKRn"
  type="button"
>
  Button
</button>
`;

exports[`Button renders transparent iconOnly button 1`] = `
<button
  aria-disabled="false"
  aria-label="Button"
  class="Reset__Button-sc-ohlhxz-0 styled__Wrapper-sc-pzlzbh-0 eNpAQb jkrxpI"
  type="button"
>
  <span
    class="styled__Icon-sc-pzlzbh-1"
  >
    <span
      class="styled__Icon-sc-ztr6p6-0 kwuIiV"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M244 400L100 256l144-144M120 256h292"
          fill="none"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="48"
        />
      </svg>
    </span>
  </span>
</button>
`;

exports[`Button renders with iconStart and iconEnd 1`] = `
<button
  aria-disabled="false"
  class="Reset__Button-sc-ohlhxz-0 styled__Wrapper-sc-pzlzbh-0 eNpAQb fnYKKn"
  type="button"
>
  <span
    class="styled__IconStart-sc-pzlzbh-3"
  >
    <div>
      Icon Start
    </div>
  </span>
  Button
  <span
    class="styled__IconEnd-sc-pzlzbh-2"
  >
    <div>
      Icon End
    </div>
  </span>
</button>
`;
